#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[132] --> Fix Sindragosa.
[131] --> Fix Instance Cooldown Exploit.
[130] --> Revert 'Misc fixes (TEST)...'.
[129] --> Revert 'Fix Blood Tap (TEST).'.
[128] --> Restore original scripts Sunwell Plateau.
[127] --> Fix Death and Decay.
[126] --> Fix Masters Call (53271).
[125] --> Fix Blood Tap (TEST).
[124] --> Misc fixes (TEST):
           - Fixed cinderglacier charge removal.
           - Use spell ids for reaping, death rune mastery, blood of the north.
           - Fixes crash with chains of ice frost rune refresh.
[123] --> Fix hammer of the righteous double pct damage mods.
[122] --> SOTA: Fix battleground demolisher's faction.
[121] --> Fix Halion immunities and damage.
[120] --> Fix Gargoyle haste (TEST).
[119] --> Fix Culling Of Stratholme.
[118] --> Add Astranaar SHOP.
[117] --> Fix Night Elf: Shadowmeld.
[116] --> Revert '[gc354] remove IoC from rbg list'.
[115] --> Delete [MOD] CharacterHistory.
[114] --> Fix Val'kyr Shadowguard speed.
[113] --> Add NPC MMR Master (Final version).
[112] --> Add NPC MMR Master (Beta).
[111] --> Fix LoS Totems (Test!).
[110] --> Fix Arena frames (Test!).
[109] --> Add Mr.Maniek ;)
[108] --> Fix item procs of Reign of the Dead / Reign of the Unliving, cooldown should be used.
[107] --> Fix Item - Shaman T10 Elemental 4P Bonus.
[106] --> Fix buff Frostmourne.
[105] --> Add [MOD] CharacterHistory.
[104] --> Fix quest The Ring of Blood: The Final Challenge (Nagrand Arena).
[103] --> Fix Zul'drak arena.
[102] --> Scripts/BlackTemple: Fix Illidan.
[101] --> Fix Bonus 4P T10 Rogue.